Two-level index for the cookbook.

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -43,10 +43,14 @@ sichuan-cookbook.xdv: sichuan-cookbook.tex cookbook.cls \
 	illustration-002c.pdf illustration-003.pdf illustration-004.pdf \
 	illustration-005.pdf illustration-006.pdf illustration-007.pdf \
 	illustration-008.pdf illustration-009.pdf illustration-010.pdf \
-	illustration-011.pdf back-cover.pdf
+	illustration-011.pdf back-cover.pdf ingredientindex.sh
 	$(RM) $(subst .tex,.aux,$<) $(subst .tex,.toc,$<)
 	xelatex -no-pdf $< $(word 2,$^)
+	bash ingredientindex.sh $(subst .tex,.idx,$<)
+	makeindex $(subst .tex,.idx,$<)
 	xelatex -no-pdf $< $(word 2,$^)
+	bash ingredientindex.sh $(subst .tex,.idx,$<)
+	makeindex $(subst .tex,.idx,$<)
 	xelatex -no-pdf $< $(word 2,$^)
 
 git-revision.tex: $(wildcard *.cls) $(wildcard *.eps) \
