--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+*.aux
+*.ent
+*.idx
+*.ilg
+*.ind
+*.log
+*.out
+*.pdf
+*.toc
+*.xdv
+.*.swp
+FILELIST
+deps
+epub
+fonts/*.eps
+fonts/*.svg
 jpeg/*.jpg
+latex/git-revision.tex
+proof
+trim
 v0.0.3-alpha
