--- a/latex/Makefile
+++ b/latex/Makefile
@@ -34,10 +34,10 @@ all: pdf
 
 pdf: book-cover.pdf sichuan-cookbook.pdf
 
-sichuan-cookbook.xdv: sichuan-cookbook.tex cookbook.cls \
-	git-revision.tex half-title.tex frontispiece.tex title-page.tex \
-	copyright.tex chairman-mao-quotes.tex title-page-1972.tex \
-	preface.tex $(wildcard recipe-*.tex) collation-notes.tex \
+sichuan-cookbook.xdv: sichuan-cookbook.tex cookbook.cls git-revision.tex \
+	half-title.tex frontispiece.tex title-page.tex copyright.tex \
+	chairman-mao-quotes.tex title-page-1972.tex preface.tex \
+	$(wildcard recipe-*.tex) collation-notes.tex colophon.tex \
 	front-cover.pdf quux-logo.pdf \
 	sagittaria-sagittifolia.pdf zanthoxylum-planispinum.pdf \
 	illustration-001.pdf illustration-002a.pdf illustration-002b.pdf \
