Add *.md5 to the file list of "make clean"

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -165,6 +165,6 @@ clean:
 	$(RM) git-revision.tex
 	$(RM) *.aux *.dvi *.gif *.idx *.ilg *.ind *.jpg *.log *.out \
 		*.pdf *.png *.ps *.txt *.toc *.xdv *.ent *.tmp *.zip \
-		*.cache *.html
+		*.cache *.md5 *.html
 
 .PHONY: build all clean pdf print signed distilled outlined zip
