Add *.pdf and *.epub files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.aux
 *.ent
+*.epub
 *.idx
 *.ilg
 *.ind
@@ -11,6 +12,7 @@
 .*.swp
 FILELIST
 deps
+epub/*.epub
 fonts/*.eps
 fonts/*.svg
 jpeg/*.jpg
