Add *.pdf and *.epub files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.aux
 *.ent
+*.epub
 *.idx
 *.ilg
 *.ind
@@ -11,11 +12,13 @@
 .*.swp
 FILELIST
 deps
+epub/*.epub
 fonts/*.eps
 fonts/*.svg
 jpeg/*.jpg
 latex/*.cache
 latex/*.idx.md5
+latex/*.pdf
 latex/git-revision.tex
 proof
 trim
