Call hyperxmp-add-bytecount.pl in case needed

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -97,8 +97,10 @@ book-cover.xdv: book-cover.tex git-revision.tex \
 
 book-cover.pdf sichuan-cookbook.pdf: %.pdf: %.xdv
 	xdvipdfmx -r 600 -E -z 9 -V 5 -o $@ $^
-	hyperxmp-add-bytecount $@
-	hyperxmp-add-bytecount $@
+	hyperxmp-add-bytecount $@ || \
+		/usr/share/texlive/texmf-dist/scripts/hyperxmp/hyperxmp-add-bytecount.pl $@
+	hyperxmp-add-bytecount $@ || \
+		/usr/share/texlive/texmf-dist/scripts/hyperxmp/hyperxmp-add-bytecount.pl $@
 
 sichuan-cookbook-i.o.pdf: sichuan-cookbook.pdf
 	gs -dBATCH -dNOCACHE -dNOPAUSE -dSAFER \
