Add multiple-language-copyright.pdf into Makefile

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -60,6 +60,7 @@ sichuan-cookbook.xdv: sichuan-cookbook.tex cookbook.cls git-revision.tex \
 	illustration-003.pdf illustration-004.pdf illustration-005.pdf \
 	illustration-006.pdf illustration-007.pdf illustration-008.pdf \
 	illustration-009.pdf illustration-010.pdf illustration-011.pdf \
+	multiple-language-copyright.pdf \
 	back-cover.pdf tinker-index.sh sichuan-cookbook.mst
 	$(RM) $(subst .tex,.aux,$<) $(subst .tex,.toc,$<)
 	xelatex -no-pdf $< $(word 2,$^)
